RESOLVED FIXED169573
[WK2] Call processDidCrash() right away when terminating a process that exceeded background CPU limit
https://bugs.webkit.org/show_bug.cgi?id=169573
Summary [WK2] Call processDidCrash() right away when terminating a process that excee...
Chris Dumez
Reported 2017-03-13 16:08:39 PDT
Call processDidCrash() right away when terminating a process that exceeded background CPU limit and let the client decide when to reload the content.
Attachments
Patch (5.30 KB, patch)
2017-03-13 16:10 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-03-13 16:09:05 PDT
Chris Dumez
Comment 2 2017-03-13 16:10:54 PDT
Chris Dumez
Comment 3 2017-03-21 14:08:25 PDT
Comment on attachment 304317 [details] Patch Clearing flags on attachment: 304317 Committed r214230: <http://trac.webkit.org/changeset/214230>
Chris Dumez
Comment 4 2017-03-21 14:08:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.