[WK2] Call processDidCrash() right away when terminating a process that exceeded background CPU limit https://bugs.webkit.org/show_bug.cgi?id=169573 <rdar://problem/30960968>

Reviewed by Andreas Kling.

Call processDidCrash() right away when terminating a process that exceeded background CPU limit
and let the client decide when to reload the content.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::reattachToWebProcess):
(WebKit::WebPageProxy::dispatchActivityStateChange):
(WebKit::WebPageProxy::terminateProcess):
* UIProcess/WebPageProxy.h:
* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::didExceedBackgroundCPULimit):

Canonical link: https://commits.webkit.org/186861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214230 268f45cc-cd09-0410-ab3c-d52691b4dbfc